--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -1,6 +1,7 @@
 @import 'config';
 @import 'home';
 @import 'portfolio';
+@import 'resume';
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Prompt:ital,wght@0,300;0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,700&display=swap');
 
 * {
@@ -286,9 +287,12 @@ main {
 .testimonials-section,
 .projects-section,
 .intro-section,
-.portfolio-section {
+.portfolio-section,
+.top-section,
+.bottom-section {
     width: 100%;
     overflow: hidden;
+    border-bottom: solid 1px rgba(105, 105, 105, 0.3);
 }
 
 .about-me-section__container,
@@ -296,10 +300,13 @@ main {
 .testimonials-section__container,
 .projects-section__container,
 .intro-section__container,
-.portfolio-section__container {
+.portfolio-section__container,
+.top-section__container,
+.bottom-section {
     max-width: 85%;
     margin: 0 auto;
     padding: 2% 0;
+    // border:solid red 1px;
 }
 
 ///////////////////////////////////////////////////////////
