--- a/src/styles/scss/_home.scss
+++ b/src/styles/scss/_home.scss
@@ -3,7 +3,7 @@
 .intro {
     position: relative;
         .topic-title {
-            padding-left: 2%;
+            padding-left: 20px;
             vertical-align: center;
             &::before {
                 content: '';
@@ -22,8 +22,6 @@
 /////////////////////////////////////////////////////////////////////////
 
 .about-me-section {
-    border-bottom: solid 1px rgba(105, 105, 105, 0.3);
-
     &__container {
         padding: 3% 0;
         @include flex-row;
@@ -54,6 +52,9 @@
             }
             a {
                 color: $dark-mode-primary-color;
+                &:hover {
+                    text-decoration: underline;
+                }
             }
 
         }
@@ -76,9 +77,7 @@
                     height: 250px;
                 }
                 @include mobile {
-                    width: 200px;
-                    height: 200px;
-                    margin: 8px;
+                    display: none;
                 }
             }
 
@@ -105,6 +104,9 @@
                 padding: 5px 0;
                 a {
                     color: $dark-mode-primary-color;
+                    &:hover {
+                        text-decoration: underline;
+                    }
                 }
             }
         }
