--- a/src/styles/scss/_portfolio.scss
+++ b/src/styles/scss/_portfolio.scss
@@ -155,13 +155,14 @@
 
                 &__container {
                     margin: 0 auto;
-                    padding: 100px;
+                    padding: 50px;
                     text-align: center;
                     animation: 1s ease-in-out 0s 1 showup;
                     video {
                         width: 250px;
                         height: 250px;
                         object-fit: cover;
+                        border-radius: map-get($border-radius, image);
                         animation: float 6s ease-in-out infinite;
                     }
                     h3 {
@@ -289,32 +290,4 @@
         }
     }
 }
-
-@keyframes showup {
-    0% {
-        transform: scale(0);
-    }
-    100% {
-        transform: scale(1);
-    }
-
-  }
-
-  @keyframes float {
-	0% {
-		box-shadow: 0 5px 15px 0px rgba(100, 100, 100, 0.6);
-		transform: translatey(0px);
-	}
-	50% {
-		box-shadow: 0 25px 15px 0px rgba(100, 100, 100,0.2);
-		transform: translatey(-20px);
-	}
-	100% {
-		box-shadow: 0 5px 15px 0px rgba(100, 100, 100,0.6);
-		transform: translatey(0px);
-	}
-}
-
-
-
 
