--- a/src/styles/scss/_config.scss
+++ b/src/styles/scss/_config.scss
@@ -2,7 +2,7 @@ $dark-green: #114d3f;
 $dark-mode-bg: #07121b;
 $dark-mode-header-bg: #1b2a41;
 $dark-mode-primary-color: #06ac85;
-$dark-mode-button-hover-color: #066d55;
+$dark-mode-button-hover-color: #098b6d;
 $dark-mode-card-bg: rgb(7, 32, 46);
 $dark-mode-card-text-color: rgb(197, 191, 191);
 
