--- a/src/styles/scss/_home.scss
+++ b/src/styles/scss/_home.scss
@@ -43,6 +43,7 @@
             }
             .btn {
                 margin-right: 40px;
+                width: 160px;
                 &:hover {
                     opacity: 0.9;
                 }
