--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -84,11 +84,11 @@ a:link {
 
 @keyframes glow {
     from {
-      text-shadow: 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #367a5d, 0 0 25px #367a5d, 0 0 30px #367a5d, 0 0 35px #367a5d, 0 0 40px #367a5d;
+      text-shadow: 0 0 10px rgb(223, 221, 221), 0 0 15px rgb(223, 221, 221), 0 0 20px #2b5e48, 0 0 25px #2b5e48, 0 0 30px #2b5e48, 0 0 35px #2b5e48, 0 0 40px #2b5e48;
     }
 
     to {
-      text-shadow: 0 0 15px #fff, 0 0 20px #57cc99, 0 0 25px #57cc99, 0 0 30px #57cc99, 0 0 35px #57cc99, 0 0 40px #57cc99, 0 0 45px #57cc99;
+      text-shadow: 0 0 15px rgb(223, 221, 221), 0 0 20px #48a77d, 0 0 25px #48a77d, 0 0 30px #48a77d, 0 0 35px #48a77d, 0 0 40px #48a77d, 0 0 45px #48a77d;
     }
 };
 
@@ -134,6 +134,7 @@ header {
 .menu {
     &__name {
         h1 {
+            // color: rgb(214, 206, 206);
             animation: glow 1s ease-in-out infinite alternate;
         };
     }
